Additional Changes
Save response as custom object
Set sleep time configurable
How do background tasks in spring
Add queue for picking up pending requests and separate job for following up
Look out for expiring tokens
Look at measuredef controller to look at apache http
Update api/src/main/resources/swagger.yml for new rest endpoints